--- a/Examples/ReactNativeKakaoExample/android/app/src/main/res/values/strings.xml
+++ b/Examples/ReactNativeKakaoExample/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ReactNativeKakaoExample</string>
+    <string name="app_name">RNKakao</string>
 </resources>
